k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lumidive
  namespace: lumidive
  labels:
    app: lumidive
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: lumidive
