k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumidive-ingress
  namespace: lumidive
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
    - host: lumidive.aooba.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lumidive
                port:
                  number: 8080
